--- a/cr-matchmaking-backend/pyproject.toml
+++ b/cr-matchmaking-backend/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "^2.0"
 pydantic-settings = "^2.0"
 python-jose = { version = "^3.3", extras = ["cryptography"] }
 passlib = { version = "^1.7", extras = ["bcrypt"] }
+bcrypt = "4.0.1"
 httpx = "^0.28"
 stripe = "^12.0"
 email-validator = "^2.3.0"
